Update project links to az104 repo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>Project 00 — Setup & Cost Guardrails</h3>
           <p>Subscription hygiene, baseline structure, budgets/alerts, naming and tagging approach.</p>
           <div class="card-links">
-            <a href="projects/00-setup.html">Project page</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/00-setup">Project page</a>
             <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
           </div>
         </article>
@@ -48,7 +48,7 @@
           <h3>Project 01 — Identity & RBAC</h3>
           <p>Least-privilege RBAC, role assignments, access governance basics, validation steps.</p>
           <div class="card-links">
-            <a href="projects/01-identity-rbac.html">Project page</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/01-identity-rbac">Project page</a>
             <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
           </div>
         </article>
@@ -57,7 +57,7 @@
           <h3>Project 02 — Networking</h3>
           <p>VNet/subnets, NSGs, traffic rules design, testing/verification strategy.</p>
           <div class="card-links">
-            <a href="projects/02-networking.html">Project page</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/02-networking">Project page</a>
             <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
           </div>
         </article>
