Switch website from english to spanish

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bayron Baquedano | Azure Cloud Administrator Portfolio</title>
+  <title>Bayron Baquedano | Portafolio de Administrador Cloud en Azure</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
@@ -11,17 +11,17 @@
     <nav class="nav">
       <div class="logo">Bayron</div>
       <div class="nav-links">
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="#projects">Proyectos</a>
+        <a href="#skills">Habilidades</a>
+        <a href="#about">Sobre mi</a>
+        <a href="#contact">Contacto</a>
       </div>
     </nav>
 
     <section class="hero">
       <h1>Bayron Francisco Baquedano Ortiz</h1>
-      <p class="subtitle">Azure Cloud Administrator (AZ-104 portfolio)</p>
-      <p class="tagline">Identity & RBAC • Networking • Security Baselines • Monitoring & Cost Awareness</p>
+      <p class="subtitle">Administrador Cloud de Azure (portafolio AZ-104)</p>
+      <p class="tagline">Identidad y RBAC | Redes | Lineas base de seguridad | Monitoreo y costos</p>
 
       <div class="cta">
         <a class="btn primary" href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">GitHub</a>
@@ -32,80 +32,80 @@
 
   <main class="container">
     <section id="projects" class="section">
-      <h2>Featured Projects</h2>
+      <h2>Proyectos Destacados</h2>
 
       <div class="grid">
         <article class="card">
-          <h3>Project 00 — Setup & Cost Guardrails</h3>
-          <p>Subscription hygiene, baseline structure, budgets/alerts, naming and tagging approach.</p>
+          <h3>Proyecto 00 - Configuracion y controles de costos</h3>
+          <p>Higiene de suscripcion, estructura base, presupuestos/alertas, enfoque de nombres y etiquetas.</p>
           <div class="card-links">
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/00-setup">Project page</a>
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/00-setup">Pagina del proyecto</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repositorio</a>
           </div>
         </article>
 
         <article class="card">
-          <h3>Project 01 — Identity & RBAC</h3>
-          <p>Least-privilege RBAC, role assignments, access governance basics, validation steps.</p>
+          <h3>Proyecto 01 - Identidad y RBAC</h3>
+          <p>RBAC de minimo privilegio, asignaciones de roles, bases de gobernanza de acceso, pasos de validacion.</p>
           <div class="card-links">
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/01-identity-rbac">Project page</a>
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/01-identity-rbac">Pagina del proyecto</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repositorio</a>
           </div>
         </article>
 
         <article class="card">
-          <h3>Project 02 — Networking</h3>
-          <p>VNet/subnets, NSGs, traffic rules design, testing/verification strategy.</p>
+          <h3>Proyecto 02 - Redes</h3>
+          <p>VNet/subredes, NSG, diseno de reglas de trafico, estrategia de pruebas y verificacion.</p>
           <div class="card-links">
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/02-networking">Project page</a>
-            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repo</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/02-networking">Pagina del proyecto</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">Repositorio</a>
           </div>
         </article>
       </div>
     </section>
 
     <section id="skills" class="section">
-      <h2>Skills</h2>
+      <h2>Habilidades</h2>
       <div class="grid two">
         <div class="card">
           <h3>Azure</h3>
           <ul>
-            <li>Subscriptions, Resource Groups</li>
-            <li>RBAC (role assignments, least privilege)</li>
-            <li>VNets, Subnets, NSGs</li>
-            <li>Cost awareness (budgets/alerts, cleanup discipline)</li>
+            <li>Suscripciones, Grupos de recursos</li>
+            <li>RBAC (asignaciones de roles, minimo privilegio)</li>
+            <li>VNets, Subredes, NSG</li>
+            <li>Conciencia de costos (presupuestos/alertas, disciplina de limpieza)</li>
           </ul>
         </div>
         <div class="card">
-          <h3>Tooling</h3>
+          <h3>Herramientas</h3>
           <ul>
             <li>Git/GitHub</li>
             <li>VS Code</li>
-            <li>Azure Portal + CLI (as applicable)</li>
-            <li>Documentation-first workflow</li>
+            <li>Azure Portal + CLI (segun corresponda)</li>
+            <li>Flujo basado en documentacion</li>
           </ul>
         </div>
       </div>
     </section>
 
     <section id="about" class="section">
-      <h2>About</h2>
+      <h2>Sobre mi</h2>
       <div class="card">
         <p>
-          I’m building a hands-on Azure portfolio aligned with AZ-104, focused on real operational tasks:
-          access control, networking, and cost-aware deployments. Each project includes decisions, validation,
-          and cleanup steps to keep environments safe and predictable.
+          Estoy construyendo un portafolio practico de Azure alineado con AZ-104, enfocado en tareas reales de operacion:
+          control de acceso, redes y despliegues con conciencia de costos. Cada proyecto incluye decisiones, validacion
+          y pasos de limpieza para mantener los entornos seguros y predecibles.
         </p>
       </div>
     </section>
 
     <section id="contact" class="section">
-      <h2>Contact</h2>
+      <h2>Contacto</h2>
       <div class="card">
-        <p>Best way to reach me:</p>
+        <p>Mejor forma de contactarme:</p>
         <p>
           <a href="https://www.linkedin.com/in/bayron-francisco-baquedano-ortiz-125408230/" target="_blank" rel="noreferrer">LinkedIn</a>
-          ·
+          |
           <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">GitHub</a>
         </p>
       </div>
@@ -113,7 +113,7 @@
   </main>
 
   <footer class="container footer">
-    <p>© <span id="year"></span> Bayron Baquedano</p>
+    <p>(c) <span id="year"></span> Bayron Baquedano</p>
   </footer>
 
   <script>
