Adición de Projecto 03

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
             <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer" data-i18n="repo">Repositorio</a>
           </div>
         </article>
+
+        <article class="card">
+          <h3 data-i18n="project_03_title">Proyecto 03 - Compute (VMs)</h3>
+          <p data-i18n="project_03_desc">VM Linux en Azure, SSH por clave, NSG restringido a IP publica, validacion y limpieza de recursos.</p>
+          <div class="card-links">
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/03-compute" data-i18n="project_page">Pagina del proyecto</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer" data-i18n="repo">Repositorio</a>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -141,6 +150,8 @@
         project_01_desc: "RBAC de minimo privilegio, asignaciones de roles, bases de gobernanza de acceso, pasos de validacion.",
         project_02_title: "Proyecto 02 - Redes",
         project_02_desc: "VNet/subredes, NSG, diseno de reglas de trafico, estrategia de pruebas y verificacion.",
+        project_03_title: "Proyecto 03 - Compute (VMs)",
+        project_03_desc: "VM Linux en Azure, SSH por clave, NSG restringido a IP publica, validacion y limpieza de recursos.",
         project_page: "Pagina del proyecto",
         repo: "Repositorio",
         skills_title: "Habilidades",
@@ -171,6 +182,8 @@
         project_01_desc: "Least-privilege RBAC, role assignments, access governance basics, validation steps.",
         project_02_title: "Project 02 - Networking",
         project_02_desc: "VNet/subnets, NSGs, traffic rules design, testing/verification strategy.",
+        project_03_title: "Project 03 - Azure Compute (VMs)",
+        project_03_desc: "Linux VM on Azure, SSH key auth, NSG locked to public IP, validation and resource cleanup.",
         project_page: "Project page",
         repo: "Repo",
         skills_title: "Skills",
