--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bayron Baquedano | Portafolio de Administrador Cloud en Azure</title>
+  <link rel="icon" href="assets/brand/favicon.svg" type="image/svg+xml" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -13,7 +14,10 @@
   <div class="backdrop" aria-hidden="true"></div>
   <header class="container">
     <nav class="nav">
-      <div class="logo">Bayron</div>
+      <div class="logo">
+        <img class="logo-mark" src="assets/brand/logo.svg" width="36" height="36" alt="Logo BB" />
+        <span class="sr-only">Bayron</span>
+      </div>
       <div class="nav-links">
         <a href="#projects" data-i18n="nav_projects">Proyectos</a>
         <a href="#skills" data-i18n="nav_skills">Habilidades</a>
