--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <li data-i18n="skills_azure_2">RBAC (asignaciones de roles, minimo privilegio)</li>
             <li data-i18n="skills_azure_3">VNets, Subredes, NSG</li>
             <li data-i18n="skills_azure_4">Conciencia de costos (presupuestos/alertas, disciplina de limpieza)</li>
+            <li data-i18n="skills_azure_5">Azure VMs (Linux), autenticacion SSH y seguridad basica</li>
           </ul>
         </div>
         <div class="card">
@@ -163,6 +164,7 @@
         skills_azure_2: "RBAC (asignaciones de roles, minimo privilegio)",
         skills_azure_3: "VNets, Subredes, NSG",
         skills_azure_4: "Conciencia de costos (presupuestos/alertas, disciplina de limpieza)",
+        skills_azure_5: "Azure VMs (Linux), autenticacion SSH y seguridad basica",
         tools_title: "Herramientas",
         tools_3: "Azure Portal + CLI (segun corresponda)",
         tools_4: "Flujo basado en documentacion",
@@ -195,6 +197,7 @@
         skills_azure_2: "RBAC (role assignments, least privilege)",
         skills_azure_3: "VNets, Subnets, NSGs",
         skills_azure_4: "Cost awareness (budgets/alerts, cleanup discipline)",
+        skills_azure_5: "Azure VMs (Linux), SSH authentication, basic hardening",
         tools_title: "Tooling",
         tools_3: "Azure Portal + CLI (as applicable)",
         tools_4: "Documentation-first workflow",
