Nueva forma de contactarme

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p>
           <a href="https://www.linkedin.com/in/bayron-francisco-baquedano-ortiz-125408230/" target="_blank" rel="noreferrer">LinkedIn</a>
           |
-          <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer">GitHub</a>
+          <a href="mailto:bayronbaquedano97@gmail.com">bayronbaquedano97@gmail.com</a>
         </p>
       </div>
     </section>
