--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
             <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer" data-i18n="repo">Repositorio</a>
           </div>
         </article>
+
+        <article class="card">
+          <h3 data-i18n="project_04_title">Proyecto 04 - Storage Account</h3>
+          <p data-i18n="project_04_desc">Blob Storage con contenedores publico/privado, acceso con SAS, validacion y restricciones de red.</p>
+          <div class="card-links">
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio/tree/main/04-storage" data-i18n="project_page">Pagina del proyecto</a>
+            <a href="https://github.com/BayronBaquedano/azure-az104-portfolio" target="_blank" rel="noreferrer" data-i18n="repo">Repositorio</a>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -164,6 +173,8 @@
         project_02_desc: "VNet/subredes, NSG, diseno de reglas de trafico, estrategia de pruebas y verificacion.",
         project_03_title: "Proyecto 03 - Compute (VMs)",
         project_03_desc: "VM Linux en Azure, SSH por clave, NSG restringido a IP publica, validacion y limpieza de recursos.",
+        project_04_title: "Proyecto 04 - Storage Account",
+        project_04_desc: "Blob Storage con contenedores publico/privado, acceso con SAS, validacion y restricciones de red.",
         project_page: "Pagina del proyecto",
         repo: "Repositorio",
         skills_title: "Habilidades",
@@ -198,6 +209,8 @@
         project_02_desc: "VNet/subnets, NSGs, traffic rules design, testing/verification strategy.",
         project_03_title: "Project 03 - Azure Compute (VMs)",
         project_03_desc: "Linux VM on Azure, SSH key auth, NSG locked to public IP, validation and resource cleanup.",
+        project_04_title: "Project 04 - Storage Account",
+        project_04_desc: "Blob Storage with public/private containers, SAS access, validation, and network restrictions.",
         project_page: "Project page",
         repo: "Repo",
         skills_title: "Skills",
